# PoetryPythonExample

./: Dockerfile  Dockerfile.linux  README.md  pyproject.toml
src/someproject/: main.py
