[tool.poetry]
name = "someproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "someproject", from = "src"}]

[tool.poetry.dependencies]
python = "^3.09"
requests = "^2.31.0"
argparse = "^1.4.0"
logging = "^0.4.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
